--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,11 +5,11 @@ targetSdk = "35"
 
 # Kotlin & Compose
 kotlin = "2.1.10"
-compose-bom = "2025.03.01"
+compose-bom = "2025.06.00"
 
 # AndroidX Libraries
 core-ktx = "1.16.0"
-lifecycle-runtime-ktx = "2.9.0"
+lifecycle-runtime-ktx = "2.9.1"
 activity-compose = "1.10.1"
 
 # Test
@@ -21,7 +21,7 @@ robolectric = "4.11"
 turbine = "1.2.0"
 
 # Plugins
-android_application = "8.9.0"
+android_application = "8.9.3"
 android_application_lib = "7.3.1"
 hilt = "2.55"
 ksp = "2.1.10-1.0.29"
@@ -37,6 +37,7 @@ appcompat = "1.7.1"
 material = "1.12.0"
 kotlinx-serialization = "1.8.0"
 kotlinx-serialization-converter = "1.0.0"
+room = "2.7.1"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android_application" }
@@ -58,6 +59,7 @@ activity-compose = { group = "androidx.activity", name = "activity-compose", ver
 
 # Compose BOM & Components
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
+compose-runtime = {group = "androidx.compose.runtime" , name = "runtime"}
 compose-ui = { group = "androidx.compose.ui", name = "ui" }
 compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
@@ -81,7 +83,6 @@ ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 
 # Retrofit
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
-retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit-gson" }
 
 # OkHttp3
 okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp3" }
@@ -90,9 +91,6 @@ okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-
 # Kotlin Serialization
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "kotlinx-serialization-converter" }
-
-# Gson
-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 # Coroutine
 coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
@@ -106,6 +104,11 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+# Room
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 
 [bundles]
 unit-test = [
