--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,21 +9,21 @@ compose-bom = "2025.06.01"
 
 # AndroidX Libraries
 core-ktx = "1.16.0"
-lifecycle-runtime-ktx = "2.9.1"
+lifecycle-runtime-ktx = "2.9.2"
 activity-compose = "1.10.1"
 
 # Test
 junit = "4.13.2"
 androidx-junit = "1.2.1"
 espresso-core = "3.6.1"
-mockk = "1.13.8"
-robolectric = "4.14.1"
-turbine = "1.2.0"
+mockk = "1.14.5"
+robolectric = "4.15.1"
+turbine = "1.2.1"
 
 # Plugins
 android_application = "8.9.3"
 android_application_lib = "7.3.1"
-hilt = "2.55"
+hilt = "2.57"
 ksp = "2.1.10-1.0.31"
 
 #Libraries
@@ -39,6 +39,7 @@ room = "2.7.2"
 navigation = "2.9.0"
 uiTooling = "1.8.3"
 kotlin-immutable = "0.4.0"
+hilt-compose = "1.2.0"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android_application" }
@@ -105,6 +106,8 @@ datastore-preferences = { group = "androidx.datastore", name = "datastore-prefer
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
 gradle-hilt = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
+hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-compose" }
+
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
