--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ compose-bom = "2025.06.01"
 core-ktx = "1.16.0"
 lifecycle-runtime-ktx = "2.9.2"
 activity-compose = "1.10.1"
+androidx-core-splash = "1.0.1"
 
 # Test
 junit = "4.13.2"
@@ -55,6 +56,7 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 # Core
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 android-build-gradle = { module = "com.android.tools.build:gradle", version.ref = "android_application" }
+androidx-core-splash = { module = "androidx.core:core-splashscreen", version.ref = "androidx-core-splash" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
