NaverMapView style AppCompat으로 적용하여 오픈라이선스 대응

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.BeachCongetionPJ">
+        android:theme="@style/Theme.CrowdTracker">
         <activity
             android:name="com.lee.crowdtracker.root.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.BeachCongetionPJ">
+            android:theme="@style/Theme.CrowdTracker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
