--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ compose-bom = "2025.06.01"
 core-ktx = "1.16.0"
 lifecycle-runtime-ktx = "2.9.2"
 activity-compose = "1.10.1"
+androidx-core-splash = "1.0.1"
 
 # Test
 junit = "4.13.2"
@@ -40,6 +41,8 @@ navigation = "2.9.3"
 uiTooling = "1.8.3"
 kotlin-immutable = "0.4.0"
 hilt-compose = "1.2.0"
+naverMap = "3.22.1"
+gmsLocation = "21.3.0"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android_application" }
@@ -54,6 +57,7 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 # Core
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 android-build-gradle = { module = "com.android.tools.build:gradle", version.ref = "android_application" }
+androidx-core-splash = { module = "androidx.core:core-splashscreen", version.ref = "androidx-core-splash" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
@@ -115,7 +119,12 @@ material = { group = "com.google.android.material", name = "material", version.r
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
+
+# Naver
+naver-map-sdk = { group = "com.naver.maps", name = "map-sdk", version.ref = "naverMap" }
+
+# Gms
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "gmsLocation" }
 
 [bundles]
 unit-test = [
