--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name="com.lee.crowdtracker.root.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.CrowdTracker">
+            android:theme="@style/Theme.CrowdTracker.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
